Skip to content

egl: crash with nvidia on Ubuntu 17.10

With 384 drivers:

After an egl initialization and a make current, any gl calls will lead to a SIGSEGV.

[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0x00007fffaf884769 in glGetError () at /usr/lib/nvidia-384/libGL.so.1
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0x00007fffafaef3cd in vout_display_opengl_New (fmt=fmt@entry=0x7fffa86a1038, subpicture_chromas=subpicture_chromas@entry=0x7fffafdfb820, gl=0x7fffa80082c0, viewpoint=0x7fffa800887c)
    at ../../modules/video_output/opengl/vout_helper.c:734
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0x00007fffafaf7143 in Open (obj=0x7fffa86a0f50) at ../../modules/video_output/opengl/display.c:145
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  0x00007ffff70d56b3 in module_load (obj=obj@entry=0x7fffa86a0f50, init=init@entry=0x7ffff70d5600 <generic_start>, args=args@entry=0x7fffafdfb918, m=<optimized out>, m=<optimized out>) at ../../src/modules/modules.c:183
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0x00007ffff70d5bfa in vlc_module_load (obj=obj@entry=0x7fffa86a0f50, capability=capability@entry=0x7ffff716660b "vout display", name=0x7fffa86a5642 "", 
    name@entry=0x7ffff717a074 "$vout", strict=<optimized out>, probe=probe@entry=0x7ffff70d5600 <generic_start>)
    at ../../src/modules/modules.c:279
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  0x00007ffff70d6154 in module_need (obj=obj@entry=0x7fffa86a0f50, cap=cap@entry=0x7ffff716660b "vout display", name=name@entry=0x7ffff717a074 "$vout", strict=<optimized out>) at ../../src/modules/modules.c:371
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  0x00007ffff711efd5 in vout_display_New (owner=<synthetic pointer>, cfg=0x7fffa8008850, fmt=0x7fffb80556b0, load_module=<optimized out>, module=0x7ffff717a074 "$vout", obj=0x7fffb8055670) at ../../src/video_output/display.c:109
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  0x00007ffff711efd5 in DisplayNew (vout=vout@entry=0x7fffb8055670, source=0x7fffb80556b0, state=state@entry=0x7fffafdfbb40, module=module@entry=0x7ffff717a074 "$vout", is_splitter=is_splitter@entry=false, double_click_timeout=double_click_timeout@entry=300000, hide_timeout=1000000, owner_ptr=0x0) at ../../src/video_output/display.c:1198
[#8](https://code.videolan.org/videolan/vlc/-/issues/8)  0x00007ffff7120433 in vout_NewDisplay (vout=vout@entry=0x7fffb8055670, source=<optimized out>, state=state@entry=0x7fffafdfbb40, module=module@entry=0x7ffff717a074 "$vout", double_click_timeout=double_click_timeout@entry=300000, hide_timeout=<optimized out>) at ../../src/video_output/display.c:1255
[#9](https://code.videolan.org/videolan/vlc/-/issues/9)  0x00007ffff712ef10 in vout_OpenWrapper (vout=vout@entry=0x7fffb8055670, splitter_name=0x0, state=state@entry=0x7fffafdfbb40) at ../../src/video_output/vout_wrapper.c:67
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x00007ffff71234da in ThreadStart (vout=vout@entry=0x7fffb8055670, state=0x7fffafdfbb40, state@entry=0x0)
    at ../../src/video_output/video_output.c:1454
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x00007ffff7124f7d in ThreadControl (cmd=..., vout=0x7fffb8055670) at ../../src/video_output/video_output.c:1605
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x00007ffff7124f7d in Thread (object=0x7fffb8055670) at ../../src/video_output/video_output.c:1726
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x00007ffff799a7fc in start_thread (arg=0x7fffafdfc700) at pthread_create.c:465
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x00007ffff74c3b0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information