opengl: use all GL symbols from the vtable

Refs #19093